[package]
name = "node_memory_reader"
version = "0.1.0"
authors = ["joachima94@gmail.com"]
license = "ISC"
edition = "2018"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
read-process-memory = "0.1.6"

[dependencies.neon]
version = "0.10"
default-features = false
features = ["napi-6"]
